--- a/.tekton/.github/workflows/workflow.yml
+++ b/.tekton/.github/workflows/workflow.yml
@@ -20,6 +20,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install black
+          black.
 
       - name: Lint with flake8
         run: |
