--- a/.tekton/.github/workflows/workflow.yml
+++ b/.tekton/.github/workflows/workflow.yml
@@ -20,8 +20,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install black
-          black.
+          RUN flake8 --ignore=E501,F401 .
 
       - name: Lint with flake8
         run: |
